# rust-twitter-clone

./: Cargo.toml
backend/: Dockerfile
backend/src/: error_handler.rs  main.rs  schema.rs
backend/src/likes/: mod.rs  model.rs  routes.rs
backend/src/tweets/: model.rs  routes.rs
migrations/2025-01-18-122430_create/: up.sql
migrations/2025-01-18-123139_create/: up.sql
migrations/2025-01-18-123506_create/: up.sql
src/: db.rs  error_handler.rs
src/likes/: model.rs
src/tweets/: model.rs  routes.rs
